--- a/martini.yaml
+++ b/martini.yaml
@@ -5,5 +5,6 @@ images:
   - vendor_boot
 
 picks:
-  - "16-pih -p"
-  - "martini-bringup"
+  - id: "16-pih"
+    pull: true
+  - id: "martini-bringup"
