--- a/gauguin.yaml
+++ b/gauguin.yaml
@@ -2,10 +2,6 @@ images:
   - recovery
 
 picks:
-  - id: 1813
-    pull: true
-  - id: 1632
-    pull: true
-  - id: 1698
-  - id: 1699
-  - id: 2367
+  - id: "screenrecord"
+  - id: "smartspace"
+  - id : 2367
