--- a/sweet.yaml
+++ b/sweet.yaml
@@ -4,8 +4,7 @@ images:
   - recovery
 
 picks:
-  - id: "xiaomi-dolby"
-  - id: 1865
-  - id: "16-smartspace"
-  - id: 2911
-  - id: 3055
+  - id: 3967
+    pull: true
+    id: 3985
+    pull: true
