sunny: Grab BPF stuff and powerhal debug logging drop
Signed-off-by: Cyber Knight <cyberknight755@gmail.com>

--- a/sunny.yaml
+++ b/sunny.yaml
@@ -5,3 +5,10 @@ images:
 picks:
   - id: "sunny-bringup"
     pull: false
+  - id: "legacy-bpf-compat"
+  - id: 425306
+    remote: "review.lineageos.org"
+    path: "vendor/qcom/opensource/power"
+  - id: 452772
+    remote: "review.lineageos.org"
+    path: "packages/modules/Connectivity"
