--- a/gauguin.yaml
+++ b/gauguin.yaml
@@ -2,12 +2,17 @@ images:
   - recovery
 
 picks:
+  # packages/apps/Settings
   - id: 4039
     pull: true
+  # build/soong
   - id: 2112
     pull: true
+  # frameworks/av
   - id: 4078
+  # vendor/lineage
   - id: 4040
     pull: true
+  # frameworks/base
   - id: 4087
 
