--- a/gauguin.yaml
+++ b/gauguin.yaml
@@ -1,3 +1,9 @@
 images:
   - recovery
   
+picks:
+  # libperfmgr upstream changes
+  - id: 464836
+    remote: "review.lineage.org"
+    path: "hardware/lineage/interfaces"
+    pull: true
