--- a/gauguin.yaml
+++ b/gauguin.yaml
@@ -4,7 +4,10 @@ images:
 picks:
   - id: 4195
     pull: true
-  - id: 4160
+  - id: 4196
+    pull: true
+  - id: 4197
+  - id: 4187
   #BP4A
   # libperfmgr upstream changes
   # - id: 464836
