--- a/sunny.yaml
+++ b/sunny.yaml
@@ -3,7 +3,7 @@ images:
   - vendor_boot
 
 picks:
-  - id: 4137
+  - id: "sunny-qol"
   - id: "legacy-bpf-compat"
   - id: 425306
     remote: "https://review.lineageos.org"
