--- a/gauguin.yaml
+++ b/gauguin.yaml
@@ -3,11 +3,13 @@ images:
   
 picks:
     # frameworks/base
+  - id: "BP3A_asb_2025-12"
+    pull: true
+    # blur patch
   - id: 4249
-    pull: true
     # packages/apps/Settings
-  - id: 4170
-    pull: true
+    # - id: 4170
+    # pull: true
     # device/lineage/sepolicy
   - id: 465162
     remote: "https://review.lineageos.org"
