--- a/gauguin.yaml
+++ b/gauguin.yaml
@@ -7,6 +7,8 @@ picks:
     pull: true
     # blur patch
   - id: 4249
+    # fixup! SystemUI: Status bar tuner improvements
+  - id: 4316
     # packages/apps/Settings
     # - id: 4170
     # pull: true
