--- a/sweet.yaml
+++ b/sweet.yaml
@@ -5,7 +5,7 @@ images:
 
 picks:
     # Device tree
-  - id: 4238
+  - id: 4349
     pull: true
     # Common tree
   - id: 4230
@@ -14,3 +14,8 @@ picks:
   - id: 4092
     pull: true
   - id: "ln8000"
+
+extra_deps:
+  - url: https://github.com/frost-testzone/vendor_oneplus_dolby.git
+    path: vendor/oneplus/dolby
+    branch: main
