porsche: Track staging kernel

--- a/porsche.yaml
+++ b/porsche.yaml
@@ -7,3 +7,8 @@ picks:
   - id: 4240
   - id: 4375
   - id: 4376
+
+extra_deps:
+  - url: git@github.com:whyredfire/android_kernel_oneplus_sm8350.git
+    path: kernel/oneplus/sm8350
+    branch: sixteen-qpr1
