--- a/RMX2020.yaml
+++ b/RMX2020.yaml
@@ -10,3 +10,9 @@ picks:
   - id: 4402
   - id: 4403
   - id: 4404
+    # frameworks/base
+  - id: 4249
+    # device/lineage/sepolicy
+  - id: 465162
+    remote: "https://review.lineageos.org"
+    path: "device/lineage/sepolicy"
