Update audio panel configuration in porsche.yaml

--- a/porsche.yaml
+++ b/porsche.yaml
@@ -5,11 +5,16 @@ images:
 
 picks:
     # device/oneplus/sm8350-common
-  - id: 5328 # sm8350-common: Inherit device/oneplus/dolby
+  - id: 5380 # sm8350-common: overlay-custom: Configure audio panel on the left side
     pull: true
     # device/realme/porsche
   - id: 4398 # porsche: Disable gamma conversion for brightness slider
-
+   # frameworks/base
+  - id: 4249 # SettingsProvider: Add default resource for disable_window_blurs
+    pull: true
+   # packages/apps/Settings
+  - id: 4379 # Settings: Allow choosing volume panel position [2/2]
+  
 extra_deps:
   - url: git@github.com:whyredfire/android_kernel_oneplus_sm8350.git
     path: kernel/oneplus/sm8350
