--- a/dubai.yaml
+++ b/dubai.yaml
@@ -10,3 +10,6 @@ extra_deps:
   - url: git@github.com:geek0609/android_packages_apps_Updater.git
     path: packages/apps/Updater
     branch: sixteen-qpr1
+
+build:
+  type: "user"
