Change extra_deps URL from GitHub to GitLab
Updated the URL for extra_deps from GitHub to GitLab.

--- a/miatoll.yaml
+++ b/miatoll.yaml
@@ -10,7 +10,8 @@ picks:
     pull: true
 
 extra_deps:
-  - url: https://github.com/kardebayan/vendor_xiaomi_miuicamera-miatoll
+  - url: https://gitlab.com/kardebayan/vendor_xiaomi_miuicamera-miatoll
     path: vendor/xiaomi/miuicamera-miatoll
     branch: sixteen-qpr1
+
 
