--- a/surya.yaml
+++ b/surya.yaml
@@ -3,5 +3,9 @@ images:
   - dtbo
   - recovery
 
+picks:
+  - id: 4249 # wm: Allow disabling window blurs by default
+    pull: true
+
 build:
   type: "user"
