--- a/nemo.yaml
+++ b/nemo.yaml
@@ -4,8 +4,9 @@ images:
 
 picks:
   - id: "legacy-bpf-compat"
-  - id: 4249
-  - id: 465162
-    remote: "https://review.lineageos.org"
-    path: "device/lineage/sepolicy"
+  - id: 4249 # wm: Allow disabling window blurs by default
+    pull: true
+  - id: 5413 # sepolicy: Label ro.surface_flinger.blur_disabled_by_default
 
+build:
+  type: "user"
