--- a/miatoll.yaml
+++ b/miatoll.yaml
@@ -4,6 +4,7 @@ images:
   - recovery
 
 picks:
+  - id: 5437 # sm6250-common: Enable fluence for voice communication
   - id: 4249 # wm: Allow disabling window blurs by default
     pull: true
   - id: 5413 # sepolicy: Label ro.surface_flinger.blur_disabled_by_default
