Add primary microphone pick to miatoll.yaml

--- a/miatoll.yaml
+++ b/miatoll.yaml
@@ -5,7 +5,9 @@ images:
 
 picks:
   - id: 5437 # sm6250-common: Enable fluence for voice communication
+  - id: 5446 # sm6250-common: Force primary microphone
 
 build:
   type: "user"
+
 
