Add new pick for UFFD GC in miatoll.yaml

--- a/miatoll.yaml
+++ b/miatoll.yaml
@@ -5,6 +5,8 @@ images:
 
 picks:
   - id: 5541 # sm6250-common: rootdir: Set `ro.boot.hardware.revision` property
+  - id: 5542 # sm6250-common: Enable UFFD GC
 
 build:
   type: "user"
+
